<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnSaludApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/menu_salud_app"
    />

    <Button
        android:id="@+id/btnImcApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/menu_imc_app"
    />

    <Button
        android:id="@+id/btnTodoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_todo_app"
    />
  </LinearLayout>