<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_todo_app2"
    tools:context=".todoapp.TodoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/color_title"
        android:text="@string/todo_app_principal_title"
        android:padding="30dp"
    />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/background_disabled"
        android:text="@string/todo_app_subtitle_1"
    />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
    >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/background_disabled"
        android:textAllCaps="true"
        android:text="@string/todo_app_subtitle_2"
    />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_plus"
            android:tint="@color/white"
            android:backgroundTint="@color/color_floating_button_todo"
        />

        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_plus"
            android:tint="@color/white"
            android:backgroundTint="@color/color_floating_button_todo"
        /> -->
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>