<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".imccalculator.ImcActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:layout_constraintEnd_toStartOf="@+id/viewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_male_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/backgroud_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_female_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVHeight"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/backgroud_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewMale"
        app:layout_constraintTop_toBottomOf="@+id/viewMale"
        >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="120 cm"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:stepSize="1"
                android:value="120"
                android:valueFrom="120"
                android:valueTo="200" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:id="@+id/cardVWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/backgroud_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardVHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cardVAge">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-45dp"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="70"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSubstractWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/background_fab"
                android:src="@drawable/ic_subtract"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnPlusWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/background_fab"
                app:tint="@color/white"
                android:src="@drawable/ic_plus"
            />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/backgroud_component"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/cardVAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardVWeight"
        app:layout_constraintTop_toBottomOf="@id/cardVHeight"
    >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-45dp"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="27"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSubstractAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/background_fab"
                app:tint="@color/white"
                android:src="@drawable/ic_subtract"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnPlusAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_fab"
                android:layout_marginTop="40dp"
                app:tint="@color/white"
                android:textSize="40sp"
                android:src="@drawable/ic_plus"
            />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
    
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/calculate"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="@id/cardVAge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>